[gd_scene load_steps=12 format=2]

[ext_resource path="res://pics/warningTwo.png" type="Texture" id=1]
[ext_resource path="res://hidden.tscn" type="PackedScene" id=2]
[ext_resource path="res://warning.gd" type="Script" id=3]
[ext_resource path="res://pics/warningFour.png" type="Texture" id=4]
[ext_resource path="res://pics/warningSeven.png" type="Texture" id=5]
[ext_resource path="res://pics/warningSix.png" type="Texture" id=6]
[ext_resource path="res://pics/warningEight.png" type="Texture" id=7]
[ext_resource path="res://pics/warningOne.png" type="Texture" id=8]
[ext_resource path="res://pics/warningFive.png" type="Texture" id=9]
[ext_resource path="res://pics/warningThree.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.82327, 7.91236 )

[node name="warning" type="Area2D"]
script = ExtResource( 3 )

[node name="sprites" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 10 )

[node name="Sprite4" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 9 )

[node name="Sprite6" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 6 )

[node name="Sprite7" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 5 )

[node name="Sprite8" type="Sprite" parent="sprites"]
visible = false
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = -19.8836
margin_top = -7.62058
margin_right = 20.1164
margin_bottom = 6.37942
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.122467, 0 )
shape = SubResource( 1 )

[node name="hidden" parent="." instance=ExtResource( 2 )]
[connection signal="mouse_entered" from="." to="." method="_on_warning_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_warning_mouse_exited"]
